# bigint_calc

./: .clang-format  .flake8  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  a.txt  add_spaces.awk  bc_calcs.txt  bc_out  bi_mul.c.o.asm  cmake-format.json  converters  converters.c  debug_math  debug_out  infiX_add.c  infiX_div.c  infiX_math  infiX_mathO3  infix.h  infix_large.sh  infix_out  large_numbers_as_lists.json  large_numbers_as_str.json  lsan.supp  make_tests.mk  math  math_main.c  pad_char.c  parse_json.py  py_out  setup.sh  str_to_num_array.py  strtonul.c  test  (+2 more)
include/: infiX.h
src/: CMakeLists.txt  CmakeLists.txt  array_funcs.c  attribute_macros.h  converters.c  infiX.h  infiX_add.c  infiX_dealer.c  infiX_div.c  infiX_manager.c  infiX_mul.c  infiX_op.c  infiX_sub.c  infix.h  macros.h  main.c  main.h  manager.c  math_main.c  mem_funcs.c  memfuncs.c  pad_char.c  panic.c  parsing.c  plugs.c  print_help.c  shunting_yard.c  string_funcs.c  types.h  xalloc.c
src/bigint/: CMakeLists.txt  CmakeLists.txt  _bi_alloc.c  _bi_trim.c  _bigint_struct.h  bi_compare.c  bi_copy.c  bi_delete.c  bi_dup.c  bi_is_zero.c  bi_new.c  bi_print.c  bi_swap.c  bi_tostr.c  bigint.h  bigint_typedefs.h  bigint_types.h  filter_str.c  safe_imaxabs.c
src/bigint/internals/: CMakeLists.txt  CmakeLists.txt  _bi_internals.c  _bi_internals.h  _bigint_intenals.c  _bigint_internals.c  _bigint_internals.h  _numstr_internals.c  _numstr_internals.h  _numstr_print.c
src/bigint/math/: CMakeLists.txt  bi_add.c  bi_add_int.c  bi_div.c  bi_iadd.c  bi_iadd_int.c  bi_isNaN.c  bi_isub.c  bi_isub_int.c  bi_iszero.c  bi_mul.c  bi_pow.c  bi_shift.c  bi_sub.c  bi_sub_int.c  bigint_math.h  int_to_bigint.c
src/bigint/number_parsing/: CMakeLists.txt  _numstr_alloc.c  _numstr_alloc.h  _numstr_new.c  _numstr_print.c  _numstr_to_bigint.c  _str_to_numstr.c  bi_tostr.c  char_to_int.c  count_digits.c  int_to_char.c  is_valid_radix.c  number_parsing.h
src/bigint/parse_number/: CMakeLists.txt  CmakeLists.txt  _numstr_to_bigint.c  _str_to_numstr.c  bi_tostr.c  char_int_conversion.c  char_to_int.c  count_digits.c  int_to_char.c  is_valid_radix.c  numstr_to_bigint.c  parse_number.h  str_to_numstr.c
src/bigint_math/: bi_add.c  bi_add_int.c  bi_div.c  bi_iadd.c  bi_iadd_int.c  bi_isub.c  bi_isub_int.c  bi_mul.c  bi_pow.c  bi_sub.c  bi_sub_int.c  bigint_math.h  int_to_bigint.c
src/bigint_utils/: bi_alloc.c  bi_compare.c  bi_copy.c  bi_swap.c  bi_trim.c  bigint_utils.h
src/bignum_math/: array_funcs.c  bignum_alloc.c  bignum_math.h  bn_add.c  bn_add_int.c  bn_addint.c  bn_div.c  bn_iadd.c  bn_iadd_int.c  bn_isub.c  bn_isub_int.c  bn_mul.c  bn_pow.c  bn_sub.c  bn_sub_int.c  bn_subint.c  bn_swap.c  int_to_bignum.c  intarray_funcs.c
src/bignum_utils/: bignum_utils.h  bn_alloc.c  bn_compare.c  bn_copy.c  bn_swap.c  int_to_bignum.c  is_zero.c  trim_bignum.c
src/data_structures/: CMakeLists.txt  _typedefs.h  data_structures.h  deque.c  doubly_linked_list.c  linked_lists.h  singly_linked_list.c  stack.c  stack.h
src/data_structures/deque/: CMakeLists.txt  deque.c  deque.h  linked_node.c  linked_node.h  list_node.c  list_node.h  list_type_structs.h  list_type_typedefs.h
src/data_structures/hash_table/: hash_table.h
src/data_structures/string_type/: CMakeLists.txt  string_view.h
src/data_structures/tree/: tree_node.h
src/deque/: CMakeLists.txt  deque.c  deque.h  linked_node.c  linked_node.h  list_node.c  list_node.h  list_type_structs.h  list_type_typedefs.h
src/hash_table/: hash_table.c
src/headers/: bigint.h  bignum.h  infiX.h  macros.h  xalloc.h
src/hello/: hello.c
src/interfaces/: infiX.h  xalloc.h
src/numstr/: anybase_to_bigint.c  anybase_to_bignum.c  bigint_to_numstr.c  bignum_to_numstr.c  count_digits.c  numstr.h  numstr_alloc.c  numstr_to_bigint.c  numstr_to_bignum.c  str_to_numstr.c
src/parser/: CMakeLists.txt  GRAMMAR.txt  lexer.c  lexer.h  parser.c  parser.h
src/parser/internals/: CMakeLists.txt  lexer.c  lexer.h  lexer_token.c  lexer_token.h  lexer_token_tostr.c
src/parsing/: base_conversion.c  bignum_to_numstr.c  count_digits.c  deque.c  deque_n_stack.h  lexer.c  numstr_alloc.c  numstr_to_bignum.c  parsing.h  printing.c  shunting_yard.c  stack.c  str_bignum_conversion.c  str_to_numstr.c  string_funcs.c
src/reader/: CMakeLists.txt  reader.c  reader.h
src/string_type/: CMakeLists.txt  string.c  string_ty.c  string_ty.h  string_view.h
src/string_utils/: char_to_int.c  filter_str.c  int_to_char.c  leading_chars_span.c  string_utils.h
src/test/: hello.c
src/text_processing/: numstr_alloc.c  parsing.c  printing.c  shunting_yard.c  text_processing.h
src/xalloc/: CMakeLists.txt  xalloc.c  xalloc.h
tests/: .gitignore  CMakeLists.txt  CmakeLists.txt  add_spaces.awk  aggregate_errors.awk  bc_calcs.txt  bc_out  large_numbers_as_str.json  lsan.supp  py_out  (+12 more)
tests/test_bigint/: CMakeLists.txt  CmakeLists.txt  test_bi_compare.c  test_bi_dup.c  test_bi_tostr.c  test_bigint.h
tests/test_bigint/test_internals/: CMakeLists.txt  dummy_xalloc.c  test__bi_internals.c  test__bigint_intenals.c  test__bigint_internals.c  test__numstr_internals.c  test_bi_alloc_fail.c  test_internals.h
tests/test_bigint/test_math/: CMakeLists.txt  test_bi_add.c  test_bi_div.c  test_bi_iadd.c  test_bi_is_zero.c  test_bi_ishift.c  test_bi_isub.c  test_bi_iszero.c  test_bi_mod.c  test_bi_mul.c  test_bi_pow.c  test_bi_shift.c  test_bi_sub.c  test_math.h
tests/test_bigint/test_number_parsing/: CMakeLists.txt  test__anybase_to_bi.c  test__numstr_alloc.c  test__numstr_to_bigint.c  test__str_to_numstr.c  test_number_parsing.h
tests/test_bigint/test_parse_number/: CMakeLists.txt  test__anybase_to_bi.c  test__numstr_to_bigint.c  test__str_to_numstr.c  test_main.c  test_numstr_to_bigint.c  test_str_to_numstr.c
tests/test_data_structures/test_deque/: CMakeLists.txt  test_deque.c  test_deque.h  test_linked_node.c  test_list_node.c
tests/test_deque/: CMakeLists.txt  test_deque.c  test_deque.h  test_linked_node.c
tests/test_performance/: CMakeLists.txt  time_bi_multiply.c
(+106 files in other folders)
